use JGit 7.2.0 and Jetty 12 versions